opam-version: "2.0"
version: "dev"
author: "Julien Signoles"
maintainer: "ocaml-community"
license: "LGPL-2.1 with OCaml linking exception"
synopsis: "Library for handling dates and times in your program"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.03"}
  "re" {>= "1.7.2"}
  "dune" {>= "1.0"}
  "odoc" {with-doc}
  "alcotest" {with-test}
]
tags: [ "calendar" "date" "time" "datetime" ]
homepage: "https://github.com/ocaml-community/calendar"
doc: "https://ocaml-community.github.io/calendar/"
bug-reports: "https://github.com/ocaml-community/calendar/issues"
dev-repo: "git+https://github.com/ocaml-community/calendar"
description:"""
Calendar is a library for handling dates and times in your program.
"""
